@@ -1,3 +1,3 @@
 #maven.buildNumber.plugin properties file
-#Wed May 04 13:31:22 CEST 2011
-buildNumber=101
+#Wed May 04 14:00:39 CEST 2011
+buildNumber=103
