@@ -37,8 +37,6 @@ public class TrayMenu extends PopupMenu {
 		this.add(monitorItem);
 		MenuItem configItem = new MenuItem(ReferenceCollection.TRAYMENU_CONFIG);
 		this.add(configItem);
-		MenuItem configItemSwixml = new MenuItem(ReferenceCollection.TRAYMENU_CONFIG_SWIXML);
-		this.add(configItemSwixml);
 		MenuItem helpItem = new MenuItem(ReferenceCollection.TRAYMENU_HELP);
 		this.add(helpItem);
 
